--- a/all-good-studio/package.json
+++ b/all-good-studio/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://github.com/selvarmd/ags",
+  "homepage": "https://selvarmd.github.io/ags/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
