--- a/all-good-studio/package.json
+++ b/all-good-studio/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "ogl": "^1.0.11",
+    "postprocessing": "^6.38.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-intersection-observer": "^10.0.0",
@@ -32,7 +33,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.181.2"
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
